kubernetes/argocd/radarr/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: radarr-tcp
  namespace: radarr
spec:
  selector:
    app: radarr
  ports:
  - port: 80
    targetPort: 8989
    name: radarr-tcp
    protocol: TCP
  type: ClusterIP
