kubernetes/argocd/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: star-home-neels-tech-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.home.neels.tech`)
      services:
        - name: radarr-tcp
          port: 80
  tls:
    secretName: radarr-home-neels-tech-tls
